--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "next": "13.0.7",
+    "@types/styled-components": "^5.1.26",
+    "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   }
 }
